docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.spotlight.scss
/* ... */
.hb-spotlight__title {
  @include hb-hero-title;
  margin: 0 0 hb-spacing-width('xxxs');

  @container spotlight (width > #{$container-medium}) {
    margin: 0 0 hb-spacing-width('xxxs');
  }
}

.hb-spotlight__image-wrapper {
  grid-area: media;

  // Framed and video variants.
  .hb-spotlight--framed &,
  .hb-spotlight--video & {
    @container spotlight (width > #{$container-sidebar}) {
      display: flex;
      align-items: center;
    }

    article.hb-media-image {
      max-width: hb-calculate-rems(400px);
      margin: 0 auto;
    }
  }

  // Framed and video variants - Media left.
  .hb-spotlight--framed.hb-spotlight--image-left &,
  .hb-spotlight--video.hb-spotlight--image-left & {
    @container spotlight (width > #{$container-sidebar}) {
      padding-inline-end: 0;
    }
  }

  // Expanded variant
  .hb-spotlight--expanded & {
    article.hb-media-image {
      @container spotlight (width > #{$container-sidebar}) {
        height: 100%;
      }

      @include hb-themes(('colorful', 'airy')) {
        @container spotlight (width > #{$container-sidebar}) {
          width: 102%;
          margin-inline: -2% 0;
        }
      }
    }

    img {
      object-fit: cover;
      height: auto;

      @container spotlight (width > #{$container-sidebar}) {
        height: 100%;
      }
    }
  }

  // Aspect ratio in expended spotlights changes based on container size.
  .hb-spotlight--expanded.hb-spotlight--view-mode-tall & {
    img {
      @include hb-traditional {
        aspect-ratio: 1.28;

        @container spotlight (width > #{$container-medium}) {
          aspect-ratio: 1.54;
        }

        @container spotlight (width > #{$container-sidebar}) {
          aspect-ratio: 0.73;
        }

        @container spotlight (width > #{$container-large}) {
          aspect-ratio: auto;
        }
      }

      @include hb-themes(('colorful', 'airy')) {
        aspect-ratio: 1.05;

        @container spotlight (width > #{$container-small}) {
          aspect-ratio: 1.4;
        }

        @container spotlight (width > #{$container-sidebar}) {
          aspect-ratio: 0.67;
        }

        @container spotlight (width > #{$container-large}) {
          aspect-ratio: auto;
        }
      }
    }
  }

  .hb-spotlight--expanded.hb-spotlight--view-mode-short & {
    img {
      @include hb-traditional {
        aspect-ratio: 1.65;

        @container spotlight (width > #{$container-medium}) {
          aspect-ratio: 1.92;
        }

        @container spotlight (width > #{$container-sidebar}) {
          aspect-ratio: 1.22;
        }

        @container spotlight (width > #{$container-large}) {
          aspect-ratio: auto;
        }
      }

      @include hb-themes(('colorful', 'airy')) {
        aspect-ratio: 1.44;

        @container spotlight (width > #{$container-small}) {
          aspect-ratio: 1.92;
        }

        @container spotlight (width > #{$container-medium}) {
          aspect-ratio: 2.34;
        }

        @container spotlight (width > #{$container-sidebar}) {
          aspect-ratio: 0.87;
        }

        @container spotlight (width > #{$container-large}) {
          aspect-ratio: auto;
        }
      }
    }
  }

  // Expanded variant - Media left.
  .hb-spotlight--expanded.hb-spotlight--image-left & {
    @include hb-themes(('colorful', 'airy')) {
      @container spotlight (width > #{$container-sidebar}) {
        margin-inline: 0 -2%;
      }
    }
  }

  article.hb-media-image,
  article.hb-media-video,
  img {
    width: 100%;
  }
}

// Image caption adjustments for expanded spotlights.
.hb-spotlight--expanded {
  .hb-media-image .field-media-image-caption.collapsible-caption {
    padding: 0 hb-calculate-rems(32px) hb-calculate-rems(21px);

    @include hb-themes(('colorful', 'airy')) {
      bottom: 0;
      min-height: hb-calculate-rems(160px);

      .toggle-caption__toggle,
      .toggle-caption__content {
        bottom: hb-calculate-rems(48px);
      }

      @container spotlight (width > #{$container-sidebar}) {
        padding: 0 hb-calculate-rems(16px) hb-calculate-rems(16px)
          hb-calculate-rems(48px);
        min-height: hb-calculate-rems(44px);

        .toggle-caption__toggle,
        .toggle-caption__content {
          bottom: 0;
        }
      }
    }

    @include hb-traditional {
      @container spotlight (width > #{$container-sidebar}) {
        padding: 0 hb-calculate-rems(6px) hb-calculate-rems(6px);
      }
    }
  }
}

.hb-spotlight--expanded.hb-spotlight--image-left {
  .hb-media-image .field-media-image-caption.collapsible-caption {
    @include hb-themes(('colorful', 'airy')) {
      @container spotlight (width > #{$container-sidebar}) {
        padding: 0 hb-calculate-rems(48px) hb-calculate-rems(16px)
          hb-calculate-rems(16px);
      }
    }
  }
}

